# FreeImage

./: CMakeLists.txt  FreeImage.2013.vcxproj  README.md  build.bat
Source/FreeImage/: Plugin.cpp
Source/FreeImageLib/: FreeImageLib.2013.vcxproj
Source/LibJPEG/: CMakeLists.txt  LibJPEG.2013.vcxproj
Source/LibJXR/: LibJXR.2013.vcxproj
Source/LibOpenJPEG/: LibOpenJPEG.2013.vcxproj
Source/LibPNG/: LibPNG.2013.vcxproj
Source/LibRawLite/: LibRawLite.2013.vcxproj
Source/LibTIFF4/: LibTIFF4.2013.vcxproj
Source/LibWebP/: LibWebP.2013.vcxproj
Source/OpenEXR/: OpenEXR.2013.vcxproj
Source/ZLib/: CMakeLists.txt  ZLib.2013.vcxproj
Wrapper/FreeImagePlus/: FreeImagePlus.2013.vcxproj
